# master-thesis

./: CMakeLists.txt  README.md  kitti_utils.hpp  prop_kitti.cpp  prop_scannet.cpp  scannet_utils.hpp
